# monolith

./: .env.example  .gitignore  README.md  agent-kickoff-rust-tauri-vite-shadcn.md  gui.bat  index.html  package-lock.json  package.json  plan.MD  tsconfig.json  vite.config.ts
docs/: AGENT_IMPORT.md  agent-import.example.json  agent-import.schema.json
scripts/: android-env.bat  prepare-gui.ps1  release-windows.ps1  set-version.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_bridge.rs  agent_import.rs  commands.rs  error.rs  lib.rs  main.rs  models.rs  pairing.rs  remembered_unlock.rs  seed.rs  state.rs  strength.rs  templates.rs  totp.rs
src-tauri/src/db/: mod.rs  repo.rs
src-tauri/src/vault/: crypto.rs  mod.rs
src/components/: Browser.tsx  Chrome.tsx  FieldRow.tsx  Home.tsx  LockScreen.tsx  Onboarding.tsx  ProjectActionsMenu.tsx  ProjectIcon.tsx  ProjectView.tsx  Settings.tsx  Totp.tsx  modals.tsx
src/components/ui/: btn.tsx  primitives.tsx
src/lib/: brand-marks.tsx  credential-autofill.ts  expiration.ts  format.ts  github-autofill.ts  icons.tsx  tauri.ts  totp-qr.ts  types.ts  ui.tsx
