[package]
name = "monolith"
version = "0.1.6"
description = "MONOLITH - a local-first credential & secrets vault"
authors = ["you"]
edition = "2021"
default-run = "monolith"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "monolith_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "monolith"
path = "src/main.rs"

[[bin]]
name = "monolith_agent_import"
path = "src/bin/monolith_agent_import.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Tauri shell + plugins ---
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"

# --- serialization / errors / ids / time ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["std", "formatting", "parsing", "serde", "macros"] }
base64 = "0.22"
sha2 = "0.10"
urlencoding = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
local-ip-address = "0.6"

# --- vault crypto (envelope: Argon2id wrapping key -> random vault key -> XChaCha20-Poly1305 fields) ---
argon2 = "0.5.3"
chacha20poly1305 = { version = "0.10.1", features = ["alloc"] }
rand = "0.9"
secrecy = { version = "0.10.3", features = ["serde"] }
zeroize = { version = "1.8.2", features = ["derive"] }

# --- storage: plain bundled SQLite (Stage 1). Every secret value is encrypted at the field level. ---
rusqlite = { version = "0.40", features = ["bundled"] }

# --- TOTP (RFC 6238), generated in Rust ---
totp-rs = "5.7.1"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
keyring = "3"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"
